syntax = "proto3";
package cometbft.consensus.v1beta2;

option go_package = "github.com/cometbft/cometbft/api/cometbft/consensus/v1beta2";

import "cometbft/consensus/v1beta1/types.proto";

import "cometbft/types/v1beta3/types.proto";

// Vote is sent when voting for a proposal (or lack thereof).
message Vote {
  cometbft.types.v1beta3.Vote vote = 1;
}

// HasProposalBlockPart is sent to indicate that a particular proposal block part has been received.
message HasProposalBlockPart {
  int64 height = 1;
  int32 round  = 2;
  int32 index  = 3;
}

message Message {
  oneof sum {
    v1beta1.NewRoundStep  new_round_step  = 1;
    v1beta1.NewValidBlock new_valid_block = 2;
    v1beta1.Proposal      proposal        = 3;
    v1beta1.ProposalPOL   proposal_pol    = 4;
    v1beta1.BlockPart     block_part      = 5;
    Vote             vote            = 6;
    v1beta1.HasVote       has_vote        = 7;
    v1beta1.VoteSetMaj23  vote_set_maj23  = 8;
    v1beta1.VoteSetBits   vote_set_bits   = 9;
    HasProposalBlockPart has_proposal_block_part = 10;
  }
}
